updated summary text

--- a/PredictionAssignment.html
+++ b/PredictionAssignment.html
@@ -162,7 +162,8 @@ ldaModel &lt;- train(classe ~ ., method=&quot;lda&quot;, data=training)</code></
 </div>
 <div id="conclusion" class="section level1">
 <h1>Conclusion</h1>
-<p>As seen from the confusion matrix for lda and rf, The Random Forest model is more than 99% accurate for all the classes. The accuracy level for Linear Discriminant Analysis model is between 77 and 86% for different classes.</p>
+<p>As seen from the confusion matrix for lda and rf, The Random Forest model is around 99% accurate for all the classes. The accuracy level for Linear Discriminant Analysis model is between 77 and 86% for different classes. Random Forest model is more accurate but it takes substantially more time
+to build than linear discriminant analysis.</p>
 </div>
 
 
